[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"
name = "cht_shorelines"
authors = [
    {name = "Johan Reyns", email = "johan.reyns@deltares.nl"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyproj",
    "rasterio",
    "xarray",
    "matplotlib",
    "netCDF4",
    "pyyaml",
    "cht-utils",
]
